fixed layout issue in sidebar

--- a/dashboard/css/main.css
+++ b/dashboard/css/main.css
@@ -69,23 +69,31 @@ header ul li:last-child {
   display: inline-block;
   margin: 20px;
   padding: 10px;
-  border-top-right-radius: 5px;
-  border-top-left-radius: 5px;
   width: 11%;
-  height: 30px;
-  background-color: #fba73c;
 }
 
-#sidebar h1 {
+#sidebar #sb-top {
+  border-top-right-radius: 5px;
+  border-top-left-radius: 5px;
+  background-color: #fba73c;
+  margin: 0 0 -12px -10px;
+  width: 179px;
+}
+
+#sidebar #sb-top h1 {
   color: #fff;
   font-size: 14px;
   text-shadow: 1px 1px #5b5b5b;
-  margin: -4px 0 0 33px;
+  margin: -41px 0 0 47px;
+  display: inline-block;
+  vertical-align: middle;
 }
 
 #sidebar #sb-top img {
-  float: left;
+  display: inline-block;
   margin-top: 6px;
+  vertical-align: middle;
+  margin: 12px 0 0 10px;
 }
 
 #sidebar #sb-bottom {
